--- a/login/signUp.html
+++ b/login/signUp.html
@@ -6,13 +6,16 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="../assets/css/signUp.css">
-
+  <script src="../assets/js/navbar.js"></script> <!-- 네비바 JS -->
 </head>
 <body>
+  <!-- 네비바 -->
   <div class="navbar">
     <a class="brand" href="/index.html">NetLab</a>
     <div id="nav-links"></div>
   </div>
+
+  <!-- 회원가입 폼 -->
   <div class="main">
     <div class="signup-box">
       <h2>회원가입</h2>
@@ -20,29 +23,17 @@
       <input type="password" id="password" placeholder="비밀번호">
       <input type="text" id="name" placeholder="닉네임">
       <button onclick="signUp()">가입하기</button>
+
       <div class="login-link">
         이미 회원이신가요?
         <a href="/login/login.html">로그인</a>
       </div>
     </div>
   </div>
-  <script>
-    // 상단바 구성
-    $(document).ready(function () {
-      const token = localStorage.getItem('token');
-      const nav = $('#nav-links');
-      if (token) {
-        nav.html('<a href="/index.html">홈</a><a href="#" id="logoutBtn">로그아웃</a>');
-      } else {
-        nav.html('<a href="/index.html">홈</a><a href="/login/login.html">로그인</a>');
-      }
-      $(document).on('click', '#logoutBtn', function () {
-        localStorage.removeItem('token');
-        alert('로그아웃 되었습니다');
-        location.href = '/index.html';
-      });
 
-      // 엔터키 치면 전송
+  <script>
+    // 엔터키로 회원가입 실행
+    $(document).ready(function(){
       $('input').keypress(function(e){
         if(e.which === 13){
           signUp();
@@ -66,7 +57,7 @@
         type: 'POST',
         contentType: 'application/json',
         data: JSON.stringify({ userId, password, name }),
-        success: function(response) {
+        success: function() {
           alert('회원가입 성공! 로그인 페이지로 이동합니다.');
           window.location.href = '/login/login.html';
         },
