--- a/login/signUp.html
+++ b/login/signUp.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="../assets/css/signUp.css">
-  <script src="../assets/JS/navbar.js"></script> <!-- 네비바 JS -->
+  <script src="../PUBLIC/JS/navbar.js"></script> <!-- 네비바 JS -->
 </head>
 <body>
   <!-- 네비바 -->
