--- a/community/add_question.html
+++ b/community/add_question.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../assets/css/add_question.css">
 
   <!-- 공통 네비바 (네비 렌더 + 자동 재발급) -->
-  <script src="/PUBLIC/js/navbar.js"></script>
+  <script src="/PUBLIC/JS/navbar.js"></script>
 </head>
 <body>
   <!-- 네비바: 공통 JS가 #nav-links / #user-info를 제어 -->
