--- a/community/community.html
+++ b/community/community.html
@@ -3,19 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>커뮤니티 - 질문 목록</title>
-
-  <!-- 폰트 & jQuery -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <!-- 스타일 -->
   <link rel="stylesheet" href="../assets/css/community.css">
+  <script src="/PUBLIC/JS/navbarAndToken.js"></script>
 
-  <!-- 공통 네비바 (자동 렌더 + 자동 재발급) -->
-  <script src="/PUBLIC/JS/navbar.js"></script>
 </head>
 <body>
-  <!-- 네비바: navbar.js가 #nav-links / #user-info를 제어 -->
   <div class="navbar">
     <div class="welcome"><a href="/index.html">NetLab</a></div>
     <div style="display:flex;align-items:center;gap:18px;">
