--- a/login/login.html
+++ b/login/login.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>NetLab 로그인</title>
-
-  <!-- 폰트 & jQuery -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="../PUBLIC/JS/navbar.js"></script>
+  <script src="../PUBLIC/JS/navbarAndToken.js"></script>
   <link rel="stylesheet" href="../assets/css/login.css" />
-  
 </head>
+
 <body>
-  <!-- 네비바: 공통 js가 이 영역을 제어 -->
   <div class="navbar">
     <a class="brand" href="/index.html">NetLab</a>
     <div id="nav-links"></div>
