--- a/login/signUp.html
+++ b/login/signUp.html
@@ -6,16 +6,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="../assets/css/signUp.css">
-  <script src="../PUBLIC/JS/navbar.js"></script> <!-- 네비바 JS -->
+  <script src="../PUBLIC/JS/navbarAndToken.js"></script> 
 </head>
 <body>
-  <!-- 네비바 -->
   <div class="navbar">
     <a class="brand" href="/index.html">NetLab</a>
     <div id="nav-links"></div>
   </div>
 
-  <!-- 회원가입 폼 -->
   <div class="main">
     <div class="signup-box">
       <h2>회원가입</h2>
