--- a/problems/list.html
+++ b/problems/list.html
@@ -7,10 +7,9 @@
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="../assets/css/list.css">
-  <script src="../PUBLIC/JS/navbar.js"></script>
+  <script src="../PUBLIC/JS/navbarAndToken.js"></script>
 </head>
 <body>
-  <!-- navbar.js가 관리 -->
   <div class="navbar">
     <a href="/index.html" class="brand">NetLab</a>
     <div class="nav-right">
