--- a/community/add_question.html
+++ b/community/add_question.html
@@ -3,19 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>질문 게시글 등록</title>
-
-  <!-- 폰트 & jQuery -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <!-- 스타일 -->
   <link rel="stylesheet" href="../assets/css/add_question.css">
+  <script src="/PUBLIC/JS/navbarAndToken.js"></script>
 
-  <!-- 공통 네비바 (네비 렌더 + 자동 재발급) -->
-  <script src="/PUBLIC/JS/navbar.js"></script>
 </head>
 <body>
-  <!-- 네비바: 공통 JS가 #nav-links / #user-info를 제어 -->
   <div class="navbar">
     <div class="welcome"><a href="/index.html">NetLab</a></div>
     <div style="display:flex; align-items:center;">
