--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="assets/css/index.css">
-  <script src="PUBLIC/JS/navbar.js"></script>
+  <script src="PUBLIC/JS/navbarAndToken.js"></script>
 
 </head>
 <body>
