--- a/login/signUp.html
+++ b/login/signUp.html
@@ -19,6 +19,7 @@
       <h2>회원가입</h2>
       <input type="text" id="userId" placeholder="아이디">
       <input type="password" id="password" placeholder="비밀번호">
+      <input type="password" id="password2" placeholder="비밀번호 확인">
       <input type="text" id="name" placeholder="닉네임">
       <button onclick="signUp()">가입하기</button>
 
@@ -43,10 +44,16 @@
     function signUp() {
       const userId = $('#userId').val();
       const password = $('#password').val();
+      const password2 = $('#password2').val();
       const name = $('#name').val();
+      
 
       if (!userId || !password || !name) {
         alert('모든 항목을 입력해주세요.');
+        return;
+      }
+      if (password !== password2) {
+        alert('비밀번호가 일치하지 않습니다.');
         return;
       }
 
