--- a/login/signUp.html
+++ b/login/signUp.html
@@ -20,6 +20,7 @@
       <input type="text" id="userId" placeholder="아이디">
       <input type="password" id="password" placeholder="비밀번호">
       <input type="password" id="password2" placeholder="비밀번호 확인">
+      <input type="text" id="email" placeholder="이메일">
       <input type="text" id="name" placeholder="닉네임">
       <button onclick="signUp()">가입하기</button>
 
@@ -41,11 +42,6 @@
     });
   
     function signUp() {
-      const userId    = $('#userId').val();
-      const password  = $('#password').val();
-      const password2 = $('#password2').val();
-      const name      = $('#name').val();
-  
       $.ajax({
         url: 'https://be.netlab.kr/api/auth/signup',
         type: 'POST',
@@ -54,6 +50,7 @@
           userId,
           password,
           confirmPassword: password2,   //서버에서
+          email,
           name
         }),
         success: function () {
