--- a/login/signUp.html
+++ b/login/signUp.html
@@ -32,6 +32,13 @@
   </div>
 
   <script>
+
+    const userId    = $('#userId').val();       
+    const password  = $('#password').val();     
+    const password2 = $('#password2').val();    
+    const email     = $('#email').val();        
+    const name      = $('#name').val();  
+    
     // 엔터키로 회원가입 실행
     $(document).ready(function(){
       $('input').keypress(function(e){
