--- a/login/signUp.html
+++ b/login/signUp.html
@@ -17,12 +17,14 @@
   <div class="main">
     <div class="signup-box">
       <h2>회원가입</h2>
-      <input type="text" id="userId" placeholder="아이디">
-      <input type="password" id="password" placeholder="비밀번호">
-      <input type="password" id="password2" placeholder="비밀번호 확인">
-      <input type="text" id="email" placeholder="이메일">
-      <input type="text" id="name" placeholder="닉네임">
-      <button onclick="signUp()">가입하기</button>
+      <form id="signupForm" autocomplete="off">
+        <input type="text" id="userId" placeholder="아이디" required>
+        <input type="password" id="password" placeholder="비밀번호" required>
+        <input type="password" id="password2" placeholder="비밀번호 확인" required>
+        <input type="email" id="email" placeholder="이메일" required>
+        <input type="text" id="name" placeholder="닉네임" required>
+        <button type="submit">가입하기</button>
+      </form>
 
       <div class="login-link">
         이미 회원이신가요?
@@ -32,50 +34,30 @@
   </div>
 
   <script>
-
-    const userId = $('#userId').val();       
-    const password = $('#password').val();     
-    const password2 = $('#password2').val();    
-    const email = $('#email').val();        
-    const name = $('#name').val();  
-
-    // 엔터키로 회원가입 실행
-    $(document).ready(function(){
-      $('input').keypress(function(e){
-        if(e.which === 13){
-          signUp();
-        }
+    $(function () {
+      $('#signupForm').on('submit', function (e) {
+        e.preventDefault(); // 폼의 기본 submit 막고 AJAX로 전송
+        const payload = {
+          userId: $('#userId').val().trim(),
+          password: $('#password').val(),
+          confirmPassword: $('#password2').val(),
+          email: $('#email').val().trim(),
+          name: $('#name').val().trim()
+        };
+  
+        $.ajax({
+          url: 'https://be.netlab.kr/api/auth/signup',
+          type: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify(payload),
+          success: () => {
+            alert('회원가입 성공! 로그인 페이지로 이동합니다.');
+            location.href = '/login/login.html';
+          },
+          error: (xhr) => alert('회원가입 실패: ' + xhr.responseText)
+        });
       });
     });
-  
-    function signUp() {
-      console.log(userId)
-      console.log(password)
-      console.log(password2)
-      console.log(email)
-      console.log(name)
-
-
-      $.ajax({
-        url: 'https://be.netlab.kr/api/auth/signup',
-        type: 'POST',
-        contentType: 'application/json',
-        data: JSON.stringify({
-          userId,
-          password,
-          confirmPassword: password2,   //서버에서
-          email,
-          name
-        }),
-        success: function () {
-          alert('회원가입 성공! 로그인 페이지로 이동합니다.');
-          window.location.href = '/login/login.html';
-        },
-        error: function (xhr) {
-          alert('회원가입 실패: ' + xhr.responseText);
-        }
-      });
-    }
   </script>
   
 </body>
