--- a/login/login.html
+++ b/login/login.html
@@ -19,9 +19,11 @@
   <div class="main">
     <div class="login-box">
       <h2>로그인</h2>
-      <input type="text" id="userId" placeholder="아이디" />
-      <input type="password" id="password" placeholder="비밀번호" />
-      <button id="loginBtn">로그인</button>
+      <form id="loginForm" autocomplete="off">
+        <input type="text" id="userId" placeholder="아이디" required />
+        <input type="password" id="password" placeholder="비밀번호" required />
+        <button type="submit">로그인</button>
+      </form>
       <div class="signup-link">
         아직 회원이 아니신가요?
         <a href="/login/signUp.html">회원가입</a>
@@ -31,13 +33,17 @@
 
   <script>
     $(function () {
-      $('#loginBtn').on('click', function () {
+      $('#loginForm').on('submit', function (e) {
+        e.preventDefault(); // 기본 submit 막고 AJAX로 처리
+
         const userId = $('#userId').val().trim();
         const password = $('#password').val().trim();
+
         if (!userId || !password) {
           alert('아이디와 비밀번호를 입력하세요.');
           return;
         }
+
         $.ajax({
           url: 'https://be.netlab.kr/api/auth/login',
           method: 'POST',
@@ -54,11 +60,6 @@
             alert('로그인 실패. 아이디 또는 비밀번호를 확인하세요.');
           }
         });
-      });
-
-      // 엔터로 로그인
-      $('input').on('keypress', function (e) {
-        if (e.which === 13) $('#loginBtn').click();
       });
     });
   </script>
