--- a/community/community.html
+++ b/community/community.html
@@ -7,6 +7,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="../assets/css/community.css">
   <script src="/PUBLIC/JS/navbarAndToken.js"></script>
+  <link rel="stylesheet" href="../assets/css/style.css">
+
 
 </head>
 <body>
