--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="./admin_assets/css/index.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
+
 
 </head>
 <body>
