--- a/login/login.html
+++ b/login/login.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../PUBLIC/JS/navbarAndToken.js"></script>
-  <link rel="stylesheet" href="../assets/css/login.css" />
+  <link rel="stylesheet" href="../assets/css/login.css"/>
+  <link rel="stylesheet" href="../assets/css/style.css">
+
 </head>
 
 <body>
