--- a/admin/index.html
+++ b/admin/index.html
@@ -14,7 +14,7 @@
 
   <!-- 네비게이션 바 -->
   <div class="navbar">
-    <div class="welcome">NetLab 관리자</div>
+    <div class="brand">NetLab 관리자</div>
     <div id="nav-links"></div>
   </div>
 
