--- a/community/community.html
+++ b/community/community.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="navbar">
-    <div class="brand"><a href="/index.html">NetLab</a></div>
+    <a href="/index.html" class="brand">NetLab</a>
     <div style="display:flex;align-items:center;gap:18px;">
       <div id="nav-links"></div>
       <div class="user-info" id="user-info" style="display:none;"></div>
