--- a/community/add_question.html
+++ b/community/add_question.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="navbar">
-    <div class="welcome"><a href="/index.html">NetLab</a></div>
+    <a href="/index.html" class="brand">NetLab</a>
     <div style="display:flex; align-items:center;">
       <div id="nav-links"></div>
       <div id="user-info" style="display:none;"></div>
