--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <title>NetLab</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="stylesheet" href="assets/css/index.css">
-  <script src="PUBLIC/JS/navbarAndToken.js"></script>
   <link rel="stylesheet" href="assets/css/style.css">
-
-
+  <script src="PUBLIC/JS/navbarAndToken.js"></script>
 </head>
-<body>
+<body class="has-navbar">
+  <!-- 네비바 -->
   <div class="navbar">
     <a class="brand" href="/index.html">NetLab</a>
     <div class="right-group">
@@ -19,22 +17,29 @@
       <div class="user-info" id="user-info" style="display:none;"></div>
     </div>
   </div>
-  
 
+  <!-- 메인 컨텐츠 -->
   <div class="main-content">
     <h1>NetLab에 오신 걸 환영합니다</h1>
     <p>네트워크 실습을 효율적으로 관리하고 평가하세요.</p>
-    <div class="feature-box">
-      <span style="color:#99b2c9;">여기에 주요 기능이 표시됩니다.</span>
-    </div>
-    <button class="go-community-btn" onclick="location.href='/problems/list.html'" style="margin-bottom: 12px;">
-      문제 풀러가기
-    </button>
-    <button class="go-community-btn" onclick="location.href='/community/community.html'">
-      커뮤니티(질문 게시판) 바로가기
-    </button>
-  </div>
 
-  
+    <div class="feature-grid">
+      <div class="feature-card">
+        <h2>📘 문제 풀러가기</h2>
+        <p>다양한 네트워크 문제를 풀면서 실력을 향상시켜 보세요.</p>
+        <button class="go-community-btn" onclick="location.href='/problems/list.html'">
+          문제 페이지 이동
+        </button>
+      </div>
+
+      <div class="feature-card">
+        <h2>💬 커뮤니티</h2>
+        <p>궁금한 점을 질문하고 다른 사람과 소통할 수 있어요.</p>
+        <button class="go-community-btn" onclick="location.href='/community/community.html'">
+          커뮤니티 바로가기
+        </button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
