--- a/admin/submissions/submissions.html
+++ b/admin/submissions/submissions.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="navbar">
-    <div class="welcome"><a href="/admin/index.html">← 관리자 홈</a></div>
+    <div class="brand"><a href="/admin/index.html">← 관리자 홈</a></div>
     <div id="nav-links"></div>
   </div>
   <div class="container">
